# QuasiFS

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: __quasi_fs.h  device_null.h  device_stdout.h  log.h  main.cpp  quasi_device_base.h  quasi_device_directory.h  quasi_fs.h  tests.h
src/dev/: CMakeLists.txt  dev_std.cpp  dev_std.h
src/dev/include/: dev_std.h
src/host_io/: CMakeLists.txt
src/host_io/include/: host_io.h
src/hostio/: CMakeLists.txt  host_io.h  host_io_base.cpp  host_io_posix.cpp  host_io_posix.h  host_io_virtual.cpp  host_io_virtual.h  host_io_win32.cpp  host_io_win32.h
src/hostio/include/: host_io.h  (+4 more)
src/lib/: CMakeLists.txt  quasi_fs.cpp  quasi_inode_directory.cpp  quasi_inode_regularfile.cpp  quasi_inode_symlink.cpp  quasi_partition.cpp
src/quasifs/: CMakeLists.txt  host_io_base.cpp  host_io_posix.cpp  quasi_sys_fcntl.h  quasi_sys_stat.h  quasi_types.h  quasifs.cpp  quasifs.h  quasifs_inode.h  quasifs_inode_device.cpp  quasifs_inode_device.h  quasifs_inode_directory.cpp  quasifs_inode_directory.h  quasifs_inode_file.h  quasifs_inode_regularfile.cpp  quasifs_inode_regularfile.h  quasifs_inode_symlink.cpp  quasifs_inode_symlink.h  quasifs_inode_virtualfile.h  quasifs_partition.cpp  quasifs_partition.h  quasifs_vdriver.cpp
src/quasifs/include/: host_io.h  host_io_base.h  host_io_posix.h  host_io_win32.h  quasi_errno.h  quasifs.h  quasifs_inode.h  quasifs_inode_directory.h  quasifs_inode_regularfile.h  quasifs_inode_symlink.h  quasifs_partition.h  quasifs_types.h
src/quasifs/src/: quasifs.cpp  quasifs_inode_device.cpp  quasifs_inode_directory.cpp  quasifs_inode_regularfile.cpp  quasifs_inode_symlink.cpp  quasifs_inode_virtualfile.cpp  quasifs_partition.cpp  quasifs_vdriver.cpp
(+11 files in other folders)
